src/app/globals.scss
@use "@/styles/variables" as v;

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

html {
  scroll-behavior: smooth;
  background: v.$color-burgundy-deep;
}

body {
  font-family: v.$font-body;
  background: v.$color-cream;
  color: v.$color-ink;
  font-size: 16px;
  line-height: 1.65;
  font-weight: 400;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

a {
  color: inherit;
  text-decoration: none;
}

::selection {
  background: v.$color-blush;
  color: v.$color-burgundy-deep;
}

